...
                                                <subviews>
                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uer-04-yxL" userLabel="Id Container View">
                                                        <rect key="frame" x="0.0" y="15" width="380" height="46"/>
                                                        <subviews>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Nzx-qL-hBN">
                                                                <rect key="frame" x="0.0" y="5" width="380" height="40"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="IdInputField"/>
                                                                <constraints>
                                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="Adj-hO-9pb"/>
                                                                </constraints>
                                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="next" textContentType="email"/>
                                                                <connections>
...
                                                    </view>
                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aaN-HL-xNl" userLabel="Password Container VIew">
                                                        <rect key="frame" x="0.0" y="76" width="380" height="46"/>
                                                        <subviews>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="zr8-vB-ySs">
                                                                <rect key="frame" x="0.0" y="5" width="380" height="40"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="PasswordInputField"/>
                                                                <constraints>
                                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="xyS-Kz-yfh"/>
                                                                </constraints>
                                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                                <textInputTraits key="textInputTraits" returnKeyType="join" secureTextEntry="YES" textContentType="password"/>
                                                                <connections>
...
                                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                <nil key="highlightedColor"/>
                                                            </label>
                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aSR-2d-pNx">
                                                                <rect key="frame" x="0.0" y="0.0" width="380" height="47"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="LoginButton"/>
                                                                <connections>
                                                                    <action selector="loginWithEmail:" destination="LQF-VB-7aJ" eventType="touchUpInside" id="pus-Gr-5KD"/>
                                                                </connections>
                                                            </button>
                                                        </subviews>
                                                        <color key="backgroundColor" systemColor="systemGray4Color"/>
...
